# Hexapod

./: README.md  random_stuff.cpp
DXF/: Bottom_plate.dxf  Top_plate.dxf
STL/: CE3_Pi_mount.gcode  CE3_tibia_plate_3.gcode  CE3_tibia_plate_all.gcode  Pi_mount.stl  coxa_part.stl  esp_mount.stl  femur_clamp.stl  mpu_mount.stl  tibia_part_main_1.stl  tibia_part_main_2.stl
STL/tibia)playes/: .......stl  ......stl  .....stl  ....stl  ...stl  ..stl  Body1.stl  Body2.stl  Body3.stl  Body4.stl  Body5.stl  Body6.stl  CE3_......gcode  CE3_pendulum_needle.gcode
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hexapod_bringup/share/hexapod_bringup/: package.dsv  package.ps1  package.sh
install/hexapod_bringup/share/hexapod_bringup/cmake/: hexapod_bringupConfig.cmake
install/hexapod_bringup/share/hexapod_bringup/launch/: real_robot.launch.py
install/hexapod_controller/lib/hexapod_controller/: inverse_kinematics  tip_trajectory_generator
install/hexapod_controller/share/hexapod_controller/: package.sh
install/hexapod_controller/share/hexapod_controller/config/: hexapod_controllers.yaml  joy_teleop.yaml
install/hexapod_controller/share/hexapod_controller/launch/: controller.launch.py  joystick_teleop.launch.py
install/hexapod_description/share/hexapod_description/: package.sh
install/hexapod_description/share/hexapod_description/rviz/: hexapod.rviz
install/hexapod_description/share/hexapod_description/urdf/: hexapod.urdf.xacro
install/hexapod_firmware/share/hexapod_firmware/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/hexapod_interfaces/share/hexapod_interfaces/: local_setup.sh  package.sh
install/hexapod_interfaces/share/hexapod_interfaces/cmake/: export_hexapod_interfaces__rosidl_generator_cppExport.cmake  hexapod_interfaces__rosidl_typesupport_cppExport.cmake
install/hexapod_interfaces/share/hexapod_interfaces/msg/: PointArray.idl
install/hexapod_kinematics/share/hexapod_kinematics/: local_setup.dsv  local_setup.sh  package.sh
install/hexapod_utils/lib/hexapod_utils/: float_32_republisher  joy_teleop_utility.py  keyboard_publisher.py
install/hexapod_utils/share/hexapod_utils/: package.bash  package.sh  package.xml
install/mpu9250/share/mpu9250/: package.sh
install/serial_communicator/share/serial_communicator/: package.sh
log/: latest_build
src/hexapod_bringup/: CMakeLists.txt  package.xml
src/hexapod_bringup/launch/: simulated_robot.launch.py
src/hexapod_controller/: CMakeLists.txt  package.xml
src/hexapod_controller/include/hexapod_controller/: pid_controller.hpp
src/hexapod_controller/launch/: controller.launch.py
src/hexapod_controller/src/: body_pose_generator.cpp  inverse_kinematics.cpp  tip_pose_generator.cpp  tip_trajectory_generator.cpp
src/hexapod_description/: CMakeLists.txt
src/hexapod_description/launch/: gazebo.launch.py
src/hexapod_description/urdf/: hexapod.urdf.xacro  hexapod_gazebo.xacro  hexapod_ros2_control.xacro
src/hexapod_description/worlds/: empty_world.world
src/hexapod_firmware/: CMakeLists.txt  hexapod_interface.xml  package.xml
src/hexapod_firmware/Arduino/final_code_esp_serial/: final_code_esp_serial.ino
src/hexapod_firmware/hexapod_firmware/: mpu9050_driver.py
src/hexapod_firmware/include/hexapod_firmware/: hexapod_interface.hpp
src/hexapod_firmware/launch/: hardware_interface.launch.py
src/hexapod_firmware/src/: hexapod_interface.cpp
src/hexapod_interfaces/: CMakeLists.txt
src/hexapod_kinematics/: CMakeLists.txt
src/hexapod_utils/: CMakeLists.txt
src/hexapod_utils/hexapod_utils/: joy_teleop_utility.py  keyboard_publisher.py
src/hexapod_utils/src/: float_32_republisher.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/serial_communicator/: CMakeLists.txt
src/serial_communicator/src/: serial_communicator.cpp
(+70 files in other folders)
